feat: add javaOptions